--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,21 +30,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  cloud_firestore: ^4.15.3
+  firebase_core: ^2.27.0
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  mockito: ^5.4.0  # Para testes
+  build_runner: ^2.4.0  # Para gerar mocks
   flutter_lints: ^5.0.0
+  test: ^1.24.0
+  fake_cloud_firestore: ^2.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
