--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,15 +33,17 @@ dependencies:
   cloud_firestore: ^4.15.3
   firebase_core: ^2.27.0
   cupertino_icons: ^1.0.8
+  firebase_auth: ^4.11.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^5.4.0  # Para testes
+  mocktail: ^0.3.0  # Para testes
   build_runner: ^2.4.0  # Para gerar mocks
   flutter_lints: ^5.0.0
   test: ^1.24.0
   fake_cloud_firestore: ^2.4.1
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
