--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   firebase_core: ^2.27.0
   cupertino_icons: ^1.0.8
   firebase_auth: ^4.11.0
+  equatable: ^2.0.0
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
@@ -44,6 +46,7 @@ dev_dependencies:
   test: ^1.24.0
   fake_cloud_firestore: ^2.4.1
   flutter_launcher_icons: ^0.13.1
+  bloc_test: ^9.1.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
