--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_auth: ^4.11.0
   equatable: ^2.0.0
   flutter_bloc: ^8.1.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
